- Update Java - Add My Requests Tab - Update Translation - Removed In Progress

--- a/assets/templates/assets/assets.html
+++ b/assets/templates/assets/assets.html
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-<!-- Buy Modal -->
+<!-- Create Order Modal -->
 <div class="modal fade" id="buyModal" tabindex="-1" role="dialog" aria-labelledby="buyModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
