- Fixed Static Error - Fixed Translation not showing correctly - Added Request Information - Added Canceled Requests disappear after 3 days

--- a/assets/templates/assets/index.html
+++ b/assets/templates/assets/index.html
@@ -35,6 +35,13 @@
 		markRequestCancelledText: '{% translate "Mark Request as Cancelled" %}',
 		markRequestCompletedText: '{% translate "Mark Request as Completed" %}',
         markRequestOpenText: '{% translate "Mark Request as Open" %}',
+
+        // Translates
+        validQuantityText: '{% translate "Please enter a valid quantity for at least one items." %}',
+        validQuantityTextSingle: '{% translate "Please enter a valid quantity." %}',
+        buyText: '{% translate "Buy" %}',
+        piecesText: '{% translate "pieces" %}',
+
 	};
 </script>
 
