--- a/assets/templates/assets/requests.html
+++ b/assets/templates/assets/requests.html
@@ -7,6 +7,7 @@
             <table class="table table-striped table-hover requests" id="requests" style="width: 100%;">
                 <thead>
                     <tr>
+                        <th class="col-id" style="width: 10%;">ID</th>
                         <th class="col-order" style="width: 10%;">{% translate "Order List" %}</th>
                         <th class="col-requester" style="width: 20%;">{% translate "Requestor" %}</th>
                         <th class="col-status" style="width: 5%;">{% translate "Status" %}</th>
@@ -16,6 +17,7 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td class="col-id"></
                         <td class="col-order"></td>
                         <td class="col-requester"></td>
                         <td class="col-status"></td>
@@ -33,6 +35,7 @@
         <table class="table table-striped table-hover requests" id="my-requests" style="width: 100%;">
             <thead>
                 <tr>
+                    <th class="col-id" style="width: 10%;">ID</th>
                     <th class="col-order" style="width: 10%;">{% translate "Order List" %}</th>
                     <th class="col-requester" style="width: 20%;">{% translate "Requestor" %}</th>
                     <th class="col-status" style="width: 5%;">{% translate "Status" %}</th>
@@ -42,6 +45,7 @@
             </thead>
             <tbody>
                 <tr>
+                    <td class="col-id"></td>
                     <td class="col-order"></td>
                     <td class="col-requester"></td>
                     <td class="col-status"></td>
