--- a/assets/templates/assets/bundles/settings-bundles.html
+++ b/assets/templates/assets/bundles/settings-bundles.html
@@ -8,6 +8,7 @@
 <script type="application/javascript">
 	let assetsSettings = {
         assetsUrl: '{% url "assets:api:get_assets" location="corpsag5" %}',
+        statisticsUrl: '{% url "assets:api:get_requests_statistics" %}',
 		cancelRequestUrl: '{% url "assets:request_canceled" request_id=1337 %}',
 		completeRequestUrl: '{% url "assets:request_completed" request_id=1337 %}',
         openRequestUrl: '{% url "assets:request_open" request_id=1337 %}',
