--- a/assets/templates/assets/index.html
+++ b/assets/templates/assets/index.html
@@ -4,8 +4,9 @@
 {% load static %}
 {% load assets %}
 
-{% block extra_css %}
-{% endblock extra_css %}
+{% block page_title %}
+    {{ title }} ⋗ {% translate "Assets" %}
+{% endblock %}
 
 {% block assets_block %}
 	<div class="card">
@@ -25,8 +26,12 @@
 {% block extra_javascript %}
     {% assets_static 'js/modal-system.js' %}
 
-    {% include 'assets/partials/modals/single-order.html' %}
+    {% include 'assets/partials/modal/single-order.html' %}
+    
+    {% include 'assets/partials/modal/confirm.html' %}
 
+    {% assets_static 'js/modals/single-request.js' %}
+    
     {% include 'bundles/datatables-js-bs5.html' %}
     {% include "bundles/moment-js.html" with locale=True %}
     {% include "bundles/filterdropdown-js.html" %}
@@ -37,84 +42,59 @@
     {% include 'assets/bundles/requests-bundles.html' %}
 
     <script>
-    $(document).ready(() => {
-        /* global assetsmsettings */
-        const modalRequestOrder = $('assets-single-request');
-        const modalRequestOrderError = modalRequestOrder.find('#modal-error-field');
-        //const previousUndoModal = $('#modalViewPaymentsContainer');
+        $(document).ready(() => {
+            /* global PlanetaryTable */
+            const modalRequestConfirm = $('#assets-confirm-request');
+            const modalConfirmErrorMessage = $('#modal-error-message');
 
-        // Undo Request Modal
-        modalRequestOrder.on('show.bs.modal', (event) => {
-            console.log('test')
-            const button = $(event.relatedTarget);
-            const url = button.data('action');
+            // Approve Request Modal
+            modalRequestConfirm.on('show.bs.modal', (event) => {
+                const button = $(event.relatedTarget);
+                const url = button.data('action');
 
-            console.log(url);
-            console.log(button.data('item-id'));
-            console.log(button.data('item-name'));
-            console.log(button.data('item-quantity'));
-            console.log(button.data('title'));
+                // Extract the title from the button
+                const modalTitle = button.data('title');
+                const modalTitleDiv = modalRequestConfirm.find('#modal-title');
+                modalTitleDiv.html(modalTitle);
 
-            // Extract the title from the button
-            const modalTitle = button.data('title');
-            const modalTitleDiv = modalRequestOrder.find('#modal-title');
-            modalTitleDiv.html(modalTitle);
+                // Extract the text from the button
+                const modalText = button.data('text');
+                const modalDiv = modalRequestConfirm.find('#modal-request-text');
+                modalDiv.html(modalText);
 
-            // Extract the text from the button
-            const modalText = button.data('text');
-            const modalDiv = modalRequestOrder.find('#modal-request-text');
-            modalDiv.html(modalText);
-
-            $('#modal-button-confirm-assets-single-request').on('click', () => {
-                const form = modalRequestOrder.find('form');
-                const amountField = form.find('input[name="amount"]');
-                const amount = amountField.val();
-                const csrfMiddlewareToken = form.find('input[name="csrfmiddlewaretoken"]').val();
-
-                if (amount === '') {
-                    modalRequestOrderError.removeClass('d-none');
-                    amountField.addClass('is-invalid');
-
-                    // Add shake class to the error field
-                    modalRequestOrderError.addClass('ts-shake');
-
-                    // Remove the shake class after 3 seconds
-                    setTimeout(() => {
-                        modalRequestOrderError.removeClass('ts-shake');
-                    }, 2000);
-                } else {
+                $('#modal-button-confirm-request').on('click', () => {
+                    const form = modalRequestConfirm.find('form');
+                    const csrfMiddlewareToken = form.find('input[name="csrfmiddlewaretoken"]').val();
                     const posting = $.post(
                         url,
                         {
-                            amount: amount,
+                            request_pk: button.data('request-pk'),
                             csrfmiddlewaretoken: csrfMiddlewareToken
                         }
                     );
 
-                    posting.done((data) => {
-                        if (data.success === true) {
-                            modalRequestOrder.modal('hide');
-                        } else {
-                            console.log(data.message);
-                            // Show the error message
-                            const errorMessage = data.message;
-                            $(errorMessage).insertAfter(amountField);
-                        }
+                    posting.done(() => {
+                        modalRequestConfirm.modal('hide');
                     }).fail((xhr, _, __) => {
                         const response = JSON.parse(xhr.responseText);
-                        const errorMessage = $('<div class="alert alert-danger"></div>').text(response.message);
-                        form.append(errorMessage);
+                        modalConfirmErrorMessage.text(response.message).removeClass('d-none'); // Show the error message
+                        modalConfirmErrorMessage.addClass('l-shake'); // Add the shake class
+
+                        // Remove the shake class after 2 seconds
+                        setTimeout(() => {
+                            modalConfirmErrorMessage.removeClass('l-shake');
+                        }, 2000);
                     });
-                }
+                });
+            }).on('hide.bs.modal', () => {
+                modalRequestConfirm.find('.alert-danger').remove();
+                modalRequestConfirm.find('input[name="amount"]').val('');
+                modalRequestConfirm.find('input[name="amount"]').removeClass('is-invalid');
+                $('#modal-button-confirm-request').unbind('click');
+                modalConfirmErrorMessage.addClass('d-none');
+                modalConfirmErrorMessage.val('');
             });
-        }).on('hide.bs.modal', () => {
-            modalRequestOrder.find('input[name="amount"]').val('');
-            modalRequestOrder.find('input[name="amount"]').removeClass('is-invalid');
-            modalRequestOrder.find('.alert-danger').remove();
-            modalRequestOrderError.addClass('d-none');
-            $('#modal-button-confirm-assets-single-request').unbind('click');
         });
-    });
     </script>
 
     <script type="application/javascript">
@@ -148,7 +128,4 @@
             });
         });
     </script>
-{% endblock %}
-
-{% block extra_script %}
-{% endblock extra_script %}
+{% endblock extra_javascript %}
